--- a/index.html
+++ b/index.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
+<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
+<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
+<!--[if IE 8]><html class="preIE9"><![endif]-->
+<!--[if gte IE 9]><!-->
 <html lang="en">
+<!--<![endif]-->
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Project tracking intro component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Project tracking intro component</title>
 </head>
+
 <body>
-  Product
-  Features
-  Pricing
-  Login
-
-  New
-  Monograph Dashboard
-
-  Powerful insights into your team
-  Project planning and time tracking for agile teams
-
-  Schedule a demo
-  to see a live preview
-  
+  <header>
+    <div class="logo">
+      <img src="/images/logo.svg">
+    </div>
+    <nav>
+      <ul class="top-nav-list">
+        <li class="top-nav-list-item"><a href="#">Product</a></li>
+        <li class="top-nav-list-item"><a href="#">Features</a></li>
+        <li class="top-nav-list-item"><a href="#">Pricing</a></li>
+        <li class="top-nav-list-item"><a href="#">Login</a></li>
+      </ul>
+    </nav>
+    <div class="header-img">
+      <img src="/images/illustration-devices.svg">
+    </div>
+  </header>
+  <main>
+    <section class="content">
+      <h1><span>New</span> Monograph Dashboard</h1>
+      <h2>Powerful insights into your team</h2>
+      <p>Project planning and time tracking for agile teams</p>
+      <div class="demo-btn">
+        <ul class="demo-btn-list">
+          <li class="demo-btn-list-item"><a>Schedule a demo</a></li>
+          <li class="demo-btn-list-item">to see a live preview</li>
+        </ul>
+      </div>
+    </section>
+  </main>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by Frontend Mentor.
+      Coded by Your Steve Saunders.
     </p>
   </footer>
 </body>
+
 </html>
