--- a/index.html
+++ b/index.html
@@ -7,30 +7,44 @@
 <!--<![endif]-->
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="/normalize.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/mobile-menu.css" />
   <title>Project tracking intro component</title>
 </head>
 
 <body>
   <header>
-    <div class="logo">
-      <img src="/images/logo.svg">
-    </div>
-    <nav>
-      <ul class="top-nav-list">
-        <li class="top-nav-list-item"><a href="#">Product</a></li>
-        <li class="top-nav-list-item"><a href="#">Features</a></li>
-        <li class="top-nav-list-item"><a href="#">Pricing</a></li>
-        <li class="top-nav-list-item"><a href="#">Login</a></li>
-      </ul>
+    <div class="background-shape"></div>
+    <a href="#" class="logo" aria-label="back to home">
+      <img src="/images/logo.svg" alt="comapny logo" />
+    </a>
+    <nav class="top-nav">
+      <div class="hamburger-wrapper">
+        <input type="checkbox" class="menu-toggle" aria-label="main menu toggle" />
+        <div class="hamburger">
+          <div class="lines"></div>
+        </div>
+      </div>
+      <div class="mobile-menu-wrapper">
+        <div class="mobile-menu">
+          <ul class="top-nav-list">
+            <li class="top-nav-list-item"><a href="#">Product</a></li>
+            <li class="top-nav-list-item"><a href="#">Features</a></li>
+            <li class="top-nav-list-item"><a href="#">Pricing</a></li>
+            <li class="top-nav-list-item"><a href="#">Login</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
-    <div class="header-img">
-      <img src="/images/illustration-devices.svg">
-    </div>
   </header>
   <main>
+    <div class="header-img">
+      <img src="/images/illustration-devices.svg" alt="computer illustration image" />
+    </div>
     <section class="content">
       <h1><span>New</span> Monograph Dashboard</h1>
       <h2>Powerful insights into your team</h2>
@@ -45,8 +59,7 @@
   </main>
   <footer>
     <p class="attribution">
-      Challenge by Frontend Mentor.
-      Coded by Your Steve Saunders.
+      Challenge by Frontend Mentor. Coded by Your Steve Saunders.
     </p>
   </footer>
 </body>
