styled the mobile navigation

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </div>
       <div class="mobile-menu-wrapper">
         <div class="mobile-menu">
-          <ul class="top-nav-list">
-            <li class="top-nav-list-item"><a href="#">Product</a></li>
-            <li class="top-nav-list-item"><a href="#">Features</a></li>
-            <li class="top-nav-list-item"><a href="#">Pricing</a></li>
-            <li class="top-nav-list-item"><a href="#">Login</a></li>
+          <ul class="mobile-menu-list">
+            <li class="mobile-menu-list-item"><a href="#">Product</a></li>
+            <li class="mobile-menu-list-item"><a href="#">Features</a></li>
+            <li class="mobile-menu-list-item"><a href="#">Pricing</a></li>
+            <li class="mobile-menu-list-item"><a href="#">Login</a></li>
           </ul>
         </div>
       </div>
