added transitions to CSS menu and linked to hamburger for click event

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
       <img src="/images/logo.svg" alt="comapny logo" />
     </a>
     <nav class="top-nav">
-      <div class="hamburger-wrapper">
-        <input type="checkbox" class="menu-toggle" aria-label="main menu toggle" />
+        <input type="checkbox" class="menu-toggle" />
         <div class="hamburger">
           <div class="lines"></div>
         </div>
-      </div>
       <div class="mobile-menu-wrapper">
         <div class="mobile-menu">
           <ul class="mobile-menu-list">
