Started styling for desktop breakpoints

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li class="mobile-menu-list-item"><a href="#">Product</a></li>
             <li class="mobile-menu-list-item"><a href="#">Features</a></li>
             <li class="mobile-menu-list-item"><a href="#">Pricing</a></li>
+            <li><span class="dot"></span></li>
             <li class="mobile-menu-list-item"><a href="#">Login</a></li>
           </ul>
         </div>
