Added all styles and updated desktop breakpoint widths. Also added active states

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </main>
   <footer>
     <p class="attribution">
-      Challenge by Frontend Mentor. <br>textCoded by Your Steve Saunders.
+      Challenge by Frontend Mentor. <br>Coded by Steve Saunders.
     </p>
   </footer>
 </body>
