Fixed accessibility issues with input checkbox

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="/images/logo.svg" alt="comapny logo" />
     </a>
     <nav class="top-nav">
-        <input type="checkbox" class="menu-toggle" />
+        <input type="checkbox" class="menu-toggle" aria-label="menu toggle" />
         <div class="hamburger">
           <div class="lines"></div>
         </div>
