--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="/normalize.css">
   <link rel="stylesheet" href="/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700|Barlow:400&display=swap" rel="stylesheet">
 </head>
 
 <body>
