--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Project Tracking Initial Component</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/normalize.css">
-  <link rel="stylesheet" href="/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700|Barlow:400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700|Barlow:400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -25,10 +26,10 @@
       <img src="/images/logo.svg" alt="comapny logo" />
     </a>
     <nav class="top-nav">
-        <input type="checkbox" class="menu-toggle" aria-label="menu toggle" />
-        <div class="hamburger">
-          <div class="lines"></div>
-        </div>
+      <input type="checkbox" class="menu-toggle" aria-label="menu toggle" />
+      <div class="hamburger">
+        <div class="lines"></div>
+      </div>
       <div class="mobile-menu-wrapper">
         <div class="mobile-menu">
           <ul class="mobile-menu-list">
