--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700|Barlow:400&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700|Barlow:400&display=swap">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
