finished large desktop monitor updates. Cleaned some unneccessary CSS.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>Powerful insights into your team</h2>
         <h3>Project planning and time tracking for agile teams</h3>
         <div class="demo">
-          <p class="demo-btn"><a href="#" class="demo-btn">Schedule a demo</a></p>
+          <p><a href="#" class="demo-btn">Schedule a demo</a></p>
           <p>to see a live preview</p>
         </div>
       </section>
